<resources>
    <string name="app_name">SelfCare</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_new_user">What would you be liked to named?</string>
    <string name="enter_new_pass">Shh!</string>
    <string name="confirm_pass">You sure?</string>
    <string name="btn_register">Lets go!</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="tracker">Tracker</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="meditation">Meditation</string>
    <string name="music">Music</string>
    <string name="yoga">Yoga</string>
    <string name="scribble">Scribble</string>
    <string name="title_activity_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sleep_instructions">\nStep 1: Lie down in a comfortable position. Notice the weight of your body on the bed.\n \nStep 2: Start the Timer.\n \nStep 3: Focus on your face. Soften your jaw, eyes and facial muscles.\n \nStep 4: Move to your neck and shoulders. Relax them.\n \nStep 5: Continue down your body, moving to your arms and fingers. Continue to your stomach, back, hips, legs and feet. Notice how each part feels.</string>
    <string name="Anger_instructions">\nStep 1: Start by taking deep breaths. Breathe in through your nose, let your belly fill with air. Breathe out through your nose.\n \nStep 2: Start the Timer.\n \nStep 3: Do \'hmm\' and hold it for as long as you can. Feel the vibrations in your throat and jaw.\n \nStep 4: Alternate between Step 1 and 3 till you feel considerably more calm.</string>


    <string-array name="mycolors">
        <item>BLACK</item>
        <item>RED</item>
        <item>GREEN</item>
        <item>BLUE</item>
        <item>YELLOW</item>
        <item>PURPLE</item>
    </string-array>
</resources>