<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pinkish" />

    <TextView
        android:id="@+id/txtRegisterHeading"
        android:layout_width="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:text="Sign Up!"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_below="@+id/txtRegisterHeading"
        android:id="@+id/imgRegister"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtNewUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_new_user"
        android:layout_below="@+id/imgRegister"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="Enter email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/edtNewUser"/>

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_new_pass"
        android:inputType="textWebPassword"
        android:layout_below="@+id/edtEmail"
        />

    <Button
        android:id="@+id/btnLetsGo"
        android:layout_below="@+id/edtNewPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_register"
        android:textColor="@color/black"
        android:onClick="Onclick"
        android:background="@color/pinkish"/>

    <TextView
        android:id="@+id/txtLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLetsGo"
        android:text="Don't have an account? Sign in."
        android:layout_marginTop="5dp"
        android:textSize="15sp"/>




</RelativeLayout>